# djangoproject

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_django.sh
my_site/: db.sqlite3
my_site/members/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
my_site/members/migrations/: 0001_initial.py  0002_member_date_joined_member_email.py  0003_remove_member_date_joined_remove_member_email_and_more.py  0004_member_email_alter_member_id.py  0005_remove_member_email_member_user_alter_member_id.py  0006_remove_member_user_member_email.py  0007_alter_member_phone.py  0008_alter_member_email_alter_member_joined_date.py  0009_alter_member_email_alter_member_joined_date_and_more.py
my_site/my_site/: settings.py  urls.py
my_site/productionfiles/: mystyles.css
my_site/templates/: 404.html
my_site/templates/members/: add_member.html  all_members.html  base.html  delete_member.html  details.html  main.html  update_member.html
