[project]
name = "djangoproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.4",
    "django-extensions==4.1",
    "psycopg2-binary==2.9.10",
    "phonenumbers==9.0.9",
    "whitenoise==6.9.0",
    "python-dotenv==1.1.1",
    "dj-database-url==3.0.1",
    "gunicorn==23.0.0",
    "asgiref==3.9.0",
    "packaging==25.0",
    "sqlparse==0.5.3",
]
